script build firebase

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "node ./configs/scripts/build_firebase_hosting.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
