--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.4",
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
     "vue": "^3.0.0",
