--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fawmi/vue-google-maps": "^0.9.4",
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
+    "mdb-vue-ui-kit": "^1.9.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
