--- a/client-web/package.json
+++ b/client-web/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
     "mdb-vue-ui-kit": "^1.9.0",
+    "spherical-geometry-js": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
