--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # dependencias do mobx
+  mobx: ^2.0.6+1
+  flutter_mobx: ^2.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +49,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+  # dependencias do mobx https://mobx.netlify.app/getting-started/
+  build_runner: ^2.1.7
+  mobx_codegen: ^2.0.5+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
