--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # dependencias do mobx
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.4
+  firebase_core: 1.13.1
 
 dev_dependencies:
   flutter_test:
