--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.4
   firebase_core: 1.13.1
+  firebase_auth: ^3.3.11
 
 dev_dependencies:
   flutter_test:
