--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   firebase_core: 1.13.1
   firebase_auth: ^3.3.11
 
+
+  #autocomplete
+  uuid: ^3.0.6
+  http: ^0.13.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
