--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,8 +43,7 @@ dependencies:
 
 
   #autocomplete
-  uuid: ^3.0.6
-  http: ^0.13.4
+  maps_places_autocomplete: ^0.0.1
 
 dev_dependencies:
   flutter_test:
