--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
         android:label="app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAR9I6Frmuh5iyJo7xQXGmQT21Jc_B3DcE"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
