--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   #google maps
   google_maps_flutter: ^2.1.3
 
+  #gerador de ids unicos
+  uuid: ^3.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
