--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   #gerador de ids unicos
   uuid: ^3.0.6
 
+  #route
+  auto_route: ^3.2.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +73,7 @@ dev_dependencies:
   # dependencias do mobx https://mobx.netlify.app/getting-started/
   build_runner: ^2.1.7
   mobx_codegen: ^2.0.5+2
+  auto_route_generator: ^3.2.3
 
   flutter_native_splash: ^2.0.1+1 # native splash screen
 
